Fixed item quantity overflow

--- a/app/assets/stylesheets/stream.css.scss
+++ b/app/assets/stylesheets/stream.css.scss
@@ -254,6 +254,7 @@
       border: 2px solid #000;
       border-left: 0;
       background: #fff;
+      overflow: scroll;
 
       input[type="submit"],
       > a {
